Updated GoldenCrossAnalysis and pulled new regression library implementation from branch.
Signed-off-by: JoarEliasson <joar.eliasson@gmail.com>